# MachineProject

./: anim-submit-final.anim
CanadianExperienceLib/: HaroldFactory.cpp  ImageDrawable.h  MachineDrawable.cpp  MachineDrawable.h  MainFrame.cpp  Picture.cpp  Picture.h  PictureFactory.cpp  PictureFactory.h  Timeline.cpp  Timeline.h  ViewEdit.cpp  ViewEdit.h  ViewTimeline.cpp
MachineLib/: ActualMachine.cpp  ActualMachine.h  Arm.cpp  Arm.h  CMakeLists.txt  Component.cpp  Component.h  Gear.cpp  Gear.h  INegotiator.h  Lever.cpp  Lever.h  Machine1.cpp  Machine1.h  Machine1Factory.cpp  Machine1Factory.h  Machine2Factory.cpp  Machine2Factory.h  MachineDialog.cpp  MachineFactory.cpp  ModifiedMachine.cpp  ModifiedMachine.h  Motor.cpp  Motor.h  Piston.cpp  Piston.h  Polygon.cpp  Polygon.h  PositionSink.cpp  PositionSink.h  PositionSource.cpp  PositionSource.h  Rod.cpp  Rod.h  RodSink.cpp  RodSink.h  RodSource.cpp  RodSource.h  RotationSink.cpp  RotationSink.h  (+8 more)
html/: _actor_8cpp.html  _actor_8h.html  _actor_8h_source.html  _actual_machine_8cpp.html  _actual_machine_8h.html  _actual_machine_8h_source.html  _anim_channel_8cpp.html  _anim_channel_8h.html  _anim_channel_8h_source.html  _anim_channel_angle_8cpp.html  _anim_channel_angle_8h.html  _anim_channel_angle_8h_source.html  _anim_channel_point_8cpp.html  _anim_channel_point_8h.html  _anim_channel_point_8h_source.html  _arm_8cpp.html  _arm_8h.html  _arm_8h_source.html  _canadian_experience_app_8cpp.html  _canadian_experience_app_8h.html  _canadian_experience_app_8h_source.html  _component_8cpp.html  _component_8h.html  (+334 more)
(+47 files in other folders)
